# signwriter

./: .gitignore  Cargo.toml  Cross.toml  build.rs  caddyapp.js  caddyapp_bg.wasm  index.html  manifest.json  mise.toml  sw.js
.github/workflows/: pages.yml  rust.yml
assets/: manifest.json  sw.js
proto/etcdv3/: auth.proto  kv.proto  membership.proto  rpc.proto
src/: app.rs  client.rs  http.rs  lib.rs  main.rs  proto.rs  thread.rs
src/components/: mod.rs  pane.rs  panel.rs
src/models/: mod.rs  router.rs  service.rs
src/widgets/: list_container.rs  mod.rs  widgets.md
