[package]
name = "signwriter"
version = "0.1.0"
authors = ["Bucky <60587749+Stinky-c@users.noreply.github.com>"]
edition = "2021"
include = ["LICENSE", "**/*.rs", "Cargo.toml"]
rust-version = "1.81"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc", "wasm32-unknown-unknown"]

[dependencies]
egui = "0.30"
eframe = { version = "0.30", default-features = false, features = [
    "accesskit", # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow", # Use the glow rendering backend. Alternative: "wgpu".
    "persistence", # Enable restoring app state when restarting the app.
    "wayland", # To support Linux (and CI)
] }
log = "0.4.22"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
egui_logger = "0.6.2"
poll-promise = "0.3.0"
# reqwest default used hyper-tls which depended on openssl-sys
reqwest = { version = "0.12.12", default-features = false, features = ["http2", "json", "rustls-tls"] }
futures = "0.3.31"
prost = "0.13.4"
eyre = "0.6.12"
cfg-if = "1.0.0"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.6"
reqwest-cross = { version = "0.4.2", features = ["native-tokio"] }
tokio = { version = "1.42.0", features = ["rt-multi-thread"] }
tonic = { version = "0.12.3", features = ["prost", "codegen", "tls", "transport"], default-features = false }

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
poll-promise = { version = "0.3.0", features = ["web"] }
wasm-bindgen-futures = "0.4.49"
web-sys = "0.3.76"
tonic = { version = "0.12.3", features = ["prost", "codegen"], default-features = false }
tonic-web-wasm-client = "0.6.0"
reqwest-cross = { version = "0.4.2", default-features = false, features = ["web-sys"] }

[build-dependencies]
tonic-build = "0.12.3"


[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }
