[package]
name = "signwriter"
version = "0.1.0"
authors = ["Bucky <60587749+Stinky-c@users.noreply.github.com>"]
edition = "2021"
include = ["LICENSE", "**/*.rs", "Cargo.toml"]
rust-version = "1.81"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc", "wasm32-unknown-unknown"]

[dependencies]
egui = {version =  "0.30",features = ["log","deadlock_detection"] }
eframe = { version = "0.30", default-features = false, features = [
    "accesskit", # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow", # Use the glow rendering backend. Alternative: "wgpu".
    "persistence", # Enable restoring app state when restarting the app.
    "wayland", # To support Linux (and CI)
] }
log = "0.4.22"
serde = { version = "1.0.217", features = ["derive"] }
egui_logger = "0.6.2"
poll-promise = "0.3.0"
prost = "0.13.4"
eyre = "0.6.12"
cfg-if = "1.0.0"
url = "2.5.4"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tonic = { version = "0.12.3", features = ["prost", "codegen", "tls", "channel"], default-features = false }
tokio = { version = "1.43.0", features = ["rt-multi-thread", "sync", "macros", "io-util"], default-features = false }


# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
poll-promise = { version = "0.3.0", features = ["web"] }
wasm-bindgen-futures = "0.4.49"
web-sys = "0.3.76"
tonic = { version = "0.12.3", features = ["prost", "codegen"], default-features = false }
tonic-web-wasm-client = "0.6.0"

[build-dependencies]
tonic-build = { version = "0.12.3", default-features = false, features = ["prost"] }


[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
